update people and results endpoint
