# odm2rest/static/js/swagger.json
@@ -9,6 +9,178 @@
     }
   },
   "paths": {
+    "/affiliations/affiliationID/{affiliationID}/": {
+      "get": {
+        "tags": [
+          "affiliations"
+        ],
+        "summary": "ODM2 affiliations retrieval by Affiliation ID(s)",
+        "responses": {
+          "200": {
+            "description": "200 Response"
+          }
+        },
+        "parameters": [
+          {
+            "required": true,
+            "type": "string",
+            "description": "Affiliation ID(s)",
+            "in": "path",
+            "name": "affiliationID"
+          }
+        ],
+        "operationId": "getAffiliationsByAffiliationID"
+      }
+    },
+    "/results/resultID/{resultID}/": {
+      "get": {
+        "tags": [
+          "results"
+        ],
+        "summary": "ODM2 results retrieval by Result ID(s)",
+        "responses": {
+          "200": {
+            "description": "200 Response"
+          }
+        },
+        "parameters": [
+          {
+            "required": true,
+            "type": "string",
+            "description": "Result ID(s)",
+            "in": "path",
+            "name": "resultID"
+          }
+        ],
+        "operationId": "getResultsByResultID"
+      }
+    },
+    "/results/": {
+      "get": {
+        "operationId": "getResultsVersion1",
+        "summary": "All ODM2 results retrieval.",
+        "responses": {
+          "200": {
+            "description": "200 Response"
+          }
+        },
+        "tags": [
+          "results"
+        ],
+        "produces": [
+          "application/json",
+          "application/yaml"
+        ]
+      }
+    },
+    "/affiliations/lastName/{lastName}/": {
+      "get": {
+        "tags": [
+          "affiliations"
+        ],
+        "summary": "ODM2 affiliations retrieval by Last Name",
+        "responses": {
+          "200": {
+            "description": "200 Response"
+          }
+        },
+        "parameters": [
+          {
+            "required": true,
+            "type": "string",
+            "description": "Person Last Name",
+            "in": "path",
+            "name": "lastName"
+          }
+        ],
+        "operationId": "getAffiliationsByLastName"
+      }
+    },
+    "/people/firstName/{firstName}/": {
+      "get": {
+        "tags": [
+          "people"
+        ],
+        "summary": "ODM2 people retrieval by First Name",
+        "responses": {
+          "200": {
+            "description": "200 Response"
+          }
+        },
+        "parameters": [
+          {
+            "required": true,
+            "type": "string",
+            "description": "Person First Name",
+            "in": "path",
+            "name": "firstName"
+          },
+          {
+            "required": false,
+            "type": "string",
+            "description": "Person Last Name",
+            "in": "query",
+            "name": "lastName"
+          }
+        ],
+        "operationId": "getPeopleByFirstName"
+      }
+    },
+    "/results/resultType/{resultType}/": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "200 Response"
+          }
+        },
+        "parameters": [
+          {
+            "required": true,
+            "type": "string",
+            "description": "Result Type (Name)",
+            "in": "path",
+            "name": "resultType"
+          },
+          {
+            "required": false,
+            "type": "integer",
+            "description": "Action ID",
+            "in": "query",
+            "name": "actionID"
+          },
+          {
+            "required": false,
+            "type": "integer",
+            "description": "Sampling Feature ID",
+            "in": "query",
+            "name": "samplingFeatureID"
+          },
+          {
+            "required": false,
+            "type": "integer",
+            "description": "Variable ID",
+            "in": "query",
+            "name": "variableID"
+          },
+          {
+            "required": false,
+            "type": "integer",
+            "description": "Simulation ID",
+            "in": "query",
+            "name": "simulationID"
+          }
+        ],
+        "tags": [
+          "results"
+        ],
+        "operationId": "getResultsByResultType",
+        "externalDocs": {
+          "url": "http://vocabulary.odm2.org/resulttype/",
+          "description": "See all available Result Types"
+        },
+        "summary": "ODM2 results retrieval by Result Type"
+      }
+    },
     "/affiliations/organizationCode/{organizationCode}/": {
       "get": {
         "tags": [
@@ -39,35 +211,12 @@
         "operationId": "getAffiliationsByOrganizationCode"
       }
     },
-    "/affiliations/affiliationID/{affiliationID}": {
+    "/people/lastName/{lastName}/": {
       "get": {
         "tags": [
-          "affiliations"
+          "people"
         ],
-        "summary": "ODM2 affiliations retrieval by Affiliation ID(s)",
-        "responses": {
-          "200": {
-            "description": "200 Response"
-          }
-        },
-        "parameters": [
-          {
-            "required": true,
-            "type": "string",
-            "description": "Affiliation ID(s)",
-            "in": "path",
-            "name": "affiliationID"
-          }
-        ],
-        "operationId": "getAffiliationsByAffiliationID"
-      }
-    },
-    "/affiliations/lastName/{lastName}/": {
-      "get": {
-        "tags": [
-          "affiliations"
-        ],
-        "summary": "ODM2 affiliations retrieval by Last Name",
+        "summary": "ODM2 people retrieval by Last Name",
         "responses": {
           "200": {
             "description": "200 Response"
@@ -82,39 +231,7 @@
             "name": "lastName"
           }
         ],
-        "operationId": "getAffiliationsByLastName"
-      }
-    },
-    "/people": {
-      "get": {
-        "summary": "All ODM2 people retrieval.",
-        "responses": {
-          "200": {
-            "description": "200 Response"
-          }
-        },
-        "tags": [
-          "people"
-        ],
-        "operationId": "getPeopleVersion1"
-      }
-    },
-    "/results": {
-      "get": {
-        "operationId": "getResultsVersion1",
-        "summary": "All ODM2 results retrieval.",
-        "responses": {
-          "200": {
-            "description": "200 Response"
-          }
-        },
-        "tags": [
-          "results"
-        ],
-        "produces": [
-          "application/json",
-          "application/yaml"
-        ]
+        "operationId": "getPeopleByLastName"
       }
     },
     "/affiliations/firstName/{firstName}/": {
@@ -147,7 +264,7 @@
         "operationId": "getAffiliationsByFirstName"
       }
     },
-    "/affiliations": {
+    "/affiliations/": {
       "get": {
         "summary": "All ODM2 affiliations retrieval.",
         "responses": {
@@ -159,6 +276,112 @@
           "affiliations"
         ],
         "operationId": "getAffiliationsVersion1"
+      }
+    },
+    "/results/samplingFeatureID/{samplingFeatureID}/": {
+      "get": {
+        "tags": [
+          "results"
+        ],
+        "summary": "ODM2 results retrieval by Sampling Feature ID(s)",
+        "responses": {
+          "200": {
+            "description": "200 Response"
+          }
+        },
+        "parameters": [
+          {
+            "required": true,
+            "type": "integer",
+            "description": "Sampling Feature ID(s)",
+            "in": "path",
+            "name": "samplingFeatureID"
+          }
+        ],
+        "operationId": "getResultsBySamplingfeatureID"
+      }
+    },
+    "/people/": {
+      "get": {
+        "summary": "All ODM2 people retrieval.",
+        "responses": {
+          "200": {
+            "description": "200 Response"
+          }
+        },
+        "tags": [
+          "people"
+        ],
+        "operationId": "getPeopleVersion1"
+      }
+    },
+    "/results/actionID/{actionID}/": {
+      "get": {
+        "tags": [
+          "results"
+        ],
+        "summary": "ODM2 results retrieval by Action ID(s)",
+        "responses": {
+          "200": {
+            "description": "200 Response"
+          }
+        },
+        "parameters": [
+          {
+            "required": true,
+            "type": "integer",
+            "description": "Action ID(s)",
+            "in": "path",
+            "name": "actionID"
+          }
+        ],
+        "operationId": "getResultsByActionID"
+      }
+    },
+    "/people/peopleID/{peopleID}/": {
+      "get": {
+        "tags": [
+          "people"
+        ],
+        "summary": "ODM2 people retrieval by People ID(s)",
+        "responses": {
+          "200": {
+            "description": "200 Response"
+          }
+        },
+        "parameters": [
+          {
+            "required": true,
+            "type": "string",
+            "description": "People ID(s)",
+            "in": "path",
+            "name": "peopleID"
+          }
+        ],
+        "operationId": "getPeopleByPeopleID"
+      }
+    },
+    "/results/resultUUID/{resultUUID}/": {
+      "get": {
+        "tags": [
+          "results"
+        ],
+        "summary": "ODM2 results retrieval by Result UUID(s)",
+        "responses": {
+          "200": {
+            "description": "200 Response"
+          }
+        },
+        "parameters": [
+          {
+            "required": true,
+            "type": "string",
+            "description": "Result UUID(s)",
+            "in": "path",
+            "name": "resultUUID"
+          }
+        ],
+        "operationId": "getResultsByResultUUID"
       }
     }
   },
